--- a/src/fonts/font-awesome/css/font-awesome.css
+++ b/src/fonts/font-awesome/css/font-awesome.css
@@ -11,6 +11,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face{
+  font-family: 'Guardians';
+  src: url('/fonts/fonts/Guardians.ttf') format('.tff');
+  font-weight: normal;
+  font-style: normal;
+}
 .fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
