--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,6 +93,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 #menu {
 	padding: 20px;
 	transition: all 0.8s;
+
 }
 #menu.navbar-default {
 	background-color: rgba(248, 248, 248, 0);
@@ -137,6 +138,18 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .navbar-default .navbar-toggle:hover>.icon-bar {
 	background-color: #FFF;
 }
+
+.navbar.transparent.navbar-inverse .navbar-inner {
+    border-width: 0px;
+    -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    background-color: rgba(0,0,0,0.0);
+    background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 50.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 50% , rgba(0,0,0,0.00)));
+    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 50%);
+    background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 50%);
+}
+
+
 .section-title {
 	margin-bottom: 70px;
 }
